Chore: add readme

--- a/notebooks/rag_groq_masp.ipynb
+++ b/notebooks/rag_groq_masp.ipynb
@@ -107,6 +107,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A sequência de Fibonacci! É uma das mais famosas e fascinantes sequências matemáticas da história.\n",
+      "\n",
+      "A sequência de Fibonacci é uma série de números em que cada termo é a soma dos dois termos anteriores, começando com 0 e 1. A sequência é assim:\n",
+      "\n",
+      "0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, ...\n",
+      "\n",
+      "Essa sequência foi descoberta pelo matemático italiano Leonardo Fibonacci no século XIII, enquanto estudava a reprodução de coelhos. Ele notou que a sequência aparecia em muitos fenômenos naturais, como a disposição das folhas em um caule, a forma das conchas de moluscos e a estrutura dos cristais.\n",
+      "\n",
+      "A sequência de Fibonacci tem várias propriedades interessantes:\n",
+      "\n",
+      "1. **Razão áurea**: A razão entre dois termos consecutivos da sequência tende a se aproximar de um valor constante, conhecido como a razão áurea (φ). Esse valor é aproximadamente igual a 1,61803398875.\n",
+      "2. **Recursividade**: A sequência de Fibonacci é recursiva, ou seja, cada termo pode ser calculado a partir dos dois termos anteriores.\n",
+      "3. **Propriedades geométricas**: A sequência de Fibonacci aparece em muitas figuras geométricas, como triângulos, quadrados e pentágonos.\n",
+      "4. **Aparição em natureza**: A sequência de Fibonacci aparece em muitos fenômenos naturais, como a disposição das folhas em um caule, a forma das conchas de moluscos e a estrutura dos cristais.\n",
+      "\n",
+      "A sequência de Fibonacci tem muitas aplicações práticas, como:\n",
+      "\n",
+      "1. **Finanças**: A sequência de Fibonacci é usada em análise técnica de mercado para prever tendências e identificar padrões.\n",
+      "2. **Arquitetura**: A sequência de Fibonacci é usada em design de edifícios e monumentos para criar proporções harmoniosas.\n",
+      "3. **Biologia**: A sequência de Fibonacci é usada para estudar a estrutura e o crescimento de organismos vivos.\n",
+      "4. **Computação**: A sequência de Fibonacci é usada em algoritmos de busca e otimização.\n",
+      "\n",
+      "Em resumo, a sequência de Fibonacci é uma das mais fascinantes e úteis sequências matemáticas da história, com aplicações em muitas áreas da ciência e da vida cotidiana."
+     ]
+    }
+   ],
+   "source": [
+    "async for chunk in chain.astream({\"input\": \"Me fale um pouco sobre sequencia de fibonacci\",\n",
+    "                                  \"chat_history\": \"\"}):\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
